feat: change to use MapperStruct